# Super_SOL

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  container-security.yml
.superpowers/sdd/: progress.md  task-3-report.md  task-8-brief.md  v09-latency-gate-report.md  v09-task-6-report.md  v09-task-7-report.md  v09-task-8-report.md
benchmarks/day3-contract-v2/: README.md  report.json
benchmarks/v0.8-confirmatory/: README.md  analysis.json  attempts.csv  audit.json  brief-en.md  brief-ko.md  manifest.json  preregistration-amendment-1.json  preregistration.json  scoring-amendment-1.json  slots.csv  slots.json
benchmarks/v0.9-loop-replay/: README.md  audit.json  gate0.json  latency-attempt5.json  report.json  v091-audit.json  v091-gate0.json  v091-latency.json
commands/: eval.md  report.md  setup.md
docs/: BENCHMARK_POSTMORTEM_0.3.1.md  BENCHMARK_POSTMORTEM_0.4.md  BENCHMARK_POSTMORTEM_0.5.md  BENCHMARK_POSTMORTEM_0.6.md  CODEX_AB_PREREGISTRATION.md  DAY3_VALIDATION.md  DAY7_REVIEW.md  RELEASE_BRIEF_0.3.0.md  RELEASE_BRIEF_0.3.1.md  RELEASE_BRIEF_0.5.0RC1.md  RELEASE_BRIEF_0.6.0RC1.md  RELEASE_BRIEF_0.7.0RC1.md  RELEASE_BRIEF_0.8.0.md  RELEASE_BRIEF_0.8.0RC1.md  RELEASE_BRIEF_0.9.0RC1.md  RELEASE_BRIEF_0.9.1RC1.md  SUPER_SOL.md  V0.5_PERFORMANCE_PROTOCOL.md  V0.6_DIAGNOSTIC_PROTOCOL.md  V0.7_PROMOTION_PROTOCOL.md  V0.8_PROMOTION_PROTOCOL.md  V0.9.1_HOLDOUT_HANDOFF.md  V0.9.1_PROMOTION_PROTOCOL.md  V0.9_POSTRELEASE_EVIDENCE.md  V0.9_PROMOTION_PROTOCOL.md  V0.9_PROSPECTIVE_HOLDOUT_PROTOCOL.md
docs/reference/: gpt-c-applicability.md
docs/superpowers/plans/: 2026-07-10-fablized-sol-vertical-slice.md  2026-07-11-super-sol-codex-plugin-v1.md  2026-07-11-super-sol-public-release.md  2026-07-11-super-sol-v0.3.1-canonical-release.md  2026-07-11-super-sol-v0.4-lean.md  2026-07-12-super-sol-v0.5-performance-amplifier.md  2026-07-12-super-sol-v0.6-router-diagnostics.md  2026-07-13-super-sol-v0.7-evidence-router.md  2026-07-13-super-sol-v0.8-masterpiece.md  2026-07-14-super-sol-v0.9-loop-fuse.md  2026-07-17-super-sol-v0.9.1-selective-gate.md
docs/superpowers/specs/: 2026-07-10-fablized-sol-vertical-slice-design.md  2026-07-11-super-sol-codex-plugin-v1-design.md  2026-07-11-super-sol-public-release-design.md  2026-07-11-super-sol-v0.4-lean-design.md  2026-07-11-super-sol-visual-guide-design.md  2026-07-12-super-sol-v0.5-performance-amplifier-design.md  2026-07-13-super-sol-v0.7-evidence-router-design.md  2026-07-13-super-sol-v0.8-masterpiece-study-design.md  2026-07-14-super-sol-v0.9-loop-fuse-design.md  2026-07-17-super-sol-v0.9.1-selective-gate-design.md
eval/: PREREGISTRATION.md  tasks.example.json  v09_loop_audit.py  v09_loop_contract.py  v09_loop_isolation.py  v09_loop_replay.py  v09_loop_runtime.py  v09_loop_seccomp.py  v09_loop_sequences.json
eval/fixtures/cache_invalidation/: catalog.py  test_catalog.py
eval/fixtures/multi_file/: order.py  pricing.py  test_order.py
eval/fixtures/path_guard/: storage.py  test_storage.py
eval/fixtures/python_logic/: __init__.py  calc.py  test_calc.py
eval/verifier/: Dockerfile  Dockerfile.grader  README.md  subject_worker.py  uv-shim  uv-shim-grader
eval/verifier/hidden/: support.py
plugins/super-sol/.codex-plugin/: plugin.json
plugins/super-sol/hooks/: __init__.py  hooks.json  prompt_dispatcher.py  super_sol_commands.py  super_sol_evidence_hook.py  super_sol_hook.py  super_sol_loop_hook.py  super_sol_loop_policy.py  super_sol_loop_state.py  super_sol_loop_validation.py  super_sol_prompt_hook.py  super_sol_routes.py  super_sol_state.py
scripts/: setup.sh
security/sbom/: grader.spdx.json  verifier.spdx.json
skills/super-sol/: SKILL.md
src/fablized_sol/: __init__.py
src/fablized_sol/engine/: __init__.py  classify_task.py  events.py  goals.py  ledger.py  models.py  verify_state.py
src/fablized_sol/eval/: DEPENDENCY_LOCK.sha256  PREREGISTRATION.md  __init__.py  codex_cleanroom.py  codex_cleanroom_home.py  codex_hook_compat.py  codex_telemetry.py  day0_ab.py  grader.py  hook_latency.py  hook_latency_models.py  hook_latency_report.py  live.py  manifest.py  provenance.py  supply_chain.py
src/fablized_sol/harness/: __init__.py  container_runtime.py  guardrails.py  hooks.py  (+4 more)
tests/: __init__.py  package_smoke_support.py  test_package_archives.py  test_package_smoke.py  test_plugin_package.py  test_release_gate_contract.py  test_release_history.py
tests/engine/: test_classify_task.py  test_goals.py  test_ledger.py  test_verify_state.py
tests/eval/: __init__.py  fake_codex_responses.py  hook_latency_test_support.py  test_codex_cleanroom.py  test_codex_cleanroom_home.py  test_codex_hook_compat.py  test_codex_hook_runtime.py  test_codex_telemetry.py  test_crossover.py  test_day0_ab.py  test_grader.py  test_grader_image_contract.py  test_hook_latency.py  test_hook_latency_report.py  test_live_eval.py  test_manifest.py  test_provenance.py  test_supply_chain.py  test_v09_loop_audit.py  test_v09_loop_isolation.py  test_v09_loop_replay.py  v09_loop_test_support.py
tests/harness/: __init__.py  test_container_runtime.py  test_container_verification.py  test_guardrails.py  test_hooks.py  test_observed_hooks.py  test_registry.py  test_router.py  test_run.py  test_sdk_compatibility.py  test_workspace_tools.py
tests/measure/: __init__.py  test_codex_ab.py  test_codex_ab_audit.py  test_day3_report.py  test_holdout.py  test_reasoning_effort.py  test_shadow.py  test_super_sol.py
tests/plugin/: conftest.py  test_plugin_contract.py  test_prompt_dispatcher.py  test_prompt_hooks.py  test_routes.py  test_tool_hooks.py  test_v07_budgets.py  test_v07_mutations.py  test_v07_state_machine.py  test_v08_model_gate.py  test_v091_prompt_gate.py  test_v091_state.py  test_v09_commands.py  test_v09_hook_contract_lifecycle.py  test_v09_hook_contract_tools.py  test_v09_loop_policy_agents.py  test_v09_loop_policy_compaction.py  test_v09_loop_policy_tools.py  test_v09_loop_state.py
(+22 files in other folders)
