[project]
name = "super-sol-harness"
version = "0.6.0rc1"
description = "Evidence-gated coding-agent harness with reproducible model comparisons"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "cuj0218" }]
keywords = ["ai-agents", "benchmark", "coding-agents", "evaluation", "openai"]
dependencies = [
  "anyio>=4.11,<5",
  "openai==2.38.0",
  "openai-agents==0.17.4",
  "pydantic>=2.12,<3",
  "typer>=0.19,<1",
]

[project.scripts]
fablized-sol-eval = "fablized_sol.eval.day0_ab:main"
fablized-sol-report = "fablized_sol.measure.report_cli:main"
super-sol-eval = "fablized_sol.eval.day0_ab:main"
super-sol-report = "fablized_sol.measure.report_cli:main"
super-sol-container-audit = "fablized_sol.eval.supply_chain:main"
super-sol-codex-ab = "fablized_sol.eval.codex_cleanroom:main"
super-sol-codex-ab-report = "fablized_sol.measure.codex_ab:main"
super-sol-codex-ab-audit = "fablized_sol.measure.codex_ab_audit:main"

[project.urls]
Homepage = "https://github.com/cwj02180218-collab/Super_SOL"
Repository = "https://github.com/cwj02180218-collab/Super_SOL"
Documentation = "https://github.com/cwj02180218-collab/Super_SOL#readme"
Issues = "https://github.com/cwj02180218-collab/Super_SOL/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fablized_sol"]

[tool.hatch.build.targets.sdist]
include = [
  "/.agents",
  "/.python-version",
  "/AGENTS.md",
  "/CONTRIBUTING.md",
  "/LICENSE",
  "/NOTICE",
  "/README.md",
  "/SECURITY.md",
  "/benchmarks",
  "/docs",
  "/eval",
  "/pyproject.toml",
  "/plugins",
  "/security",
  "/src",
  "/tests",
  "/uv.lock",
]

[dependency-groups]
dev = [
  "basedpyright>=1.31,<2",
  "pytest>=9.0.3,<10",
  "pytest-cov>=7,<8",
  "ruff>=0.12,<1",
]

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.12"
pythonPlatform = "All"
extraPaths = ["src", "plugins/super-sol/hooks"]
include = [
  "src",
  "tests",
  "plugins/super-sol/hooks",
  "eval/verifier/subject_worker.py",
  "eval/verifier/hidden/support.py",
]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist"]
reportUnusedCallResult = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedVariable = "error"
reportMissingParameterType = "error"
reportPrivateUsage = "error"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# typeCheckingMode = "all" and Ruff ANN rules enforce return annotations.
select = ["ALL"]
ignore = ["COM812", "ISC001", "D203", "D213", "CPY001", "FBT001", "FBT002"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "PLR2004", "SLF001", "D"]
"eval/**/*.py" = ["D", "INP001", "S101", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = ["error"]
