[project]
name = "super-sol-harness"
version = "0.9.0rc1"
description = "Evidence-gated coding-agent harness with reproducible model comparisons"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "cuj0218" }]
keywords = ["ai-agents", "benchmark", "coding-agents", "evaluation", "openai"]
dependencies = [
  "anyio>=4.11,<5",
  "openai==2.38.0",
  "openai-agents==0.17.4",
  "pydantic>=2.12,<3",
  "typer>=0.19,<1",
]

[project.scripts]
fablized-sol-eval = "fablized_sol.eval.day0_ab:main"
fablized-sol-report = "fablized_sol.measure.report_cli:main"
super-sol-eval = "fablized_sol.eval.day0_ab:main"
super-sol-report = "fablized_sol.measure.report_cli:main"
super-sol-container-audit = "fablized_sol.eval.supply_chain:main"
super-sol-codex-ab = "fablized_sol.eval.codex_cleanroom:main"
super-sol-codex-ab-report = "fablized_sol.measure.codex_ab:main"
super-sol-codex-ab-audit = "fablized_sol.measure.codex_ab_audit:main"
super-sol-hook-doctor = "fablized_sol.eval.codex_hook_compat:main"
super-sol-hook-latency = "fablized_sol.eval.hook_latency:main"

[project.urls]
Homepage = "https://github.com/cwj02180218-collab/Super_SOL"
Repository = "https://github.com/cwj02180218-collab/Super_SOL"
Documentation = "https://github.com/cwj02180218-collab/Super_SOL#readme"
Issues = "https://github.com/cwj02180218-collab/Super_SOL/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fablized_sol"]

[tool.hatch.build.targets.wheel.force-include]
"plugins/super-sol/.codex-plugin/plugin.json" = "fablized_sol/_release/v0_9/plugin/.codex-plugin/plugin.json"
"plugins/super-sol/hooks/__init__.py" = "fablized_sol/_release/v0_9/plugin/hooks/__init__.py"
"plugins/super-sol/hooks/hooks.json" = "fablized_sol/_release/v0_9/plugin/hooks/hooks.json"
"plugins/super-sol/hooks/prompt_dispatcher.py" = "fablized_sol/_release/v0_9/plugin/hooks/prompt_dispatcher.py"
"plugins/super-sol/hooks/super_sol_commands.py" = "fablized_sol/_release/v0_9/plugin/hooks/super_sol_commands.py"
"plugins/super-sol/hooks/super_sol_evidence_hook.py" = "fablized_sol/_release/v0_9/plugin/hooks/super_sol_evidence_hook.py"
"plugins/super-sol/hooks/super_sol_hook.py" = "fablized_sol/_release/v0_9/plugin/hooks/super_sol_hook.py"
"plugins/super-sol/hooks/super_sol_loop_hook.py" = "fablized_sol/_release/v0_9/plugin/hooks/super_sol_loop_hook.py"
"plugins/super-sol/hooks/super_sol_loop_policy.py" = "fablized_sol/_release/v0_9/plugin/hooks/super_sol_loop_policy.py"
"plugins/super-sol/hooks/super_sol_loop_state.py" = "fablized_sol/_release/v0_9/plugin/hooks/super_sol_loop_state.py"
"plugins/super-sol/hooks/super_sol_loop_validation.py" = "fablized_sol/_release/v0_9/plugin/hooks/super_sol_loop_validation.py"
"plugins/super-sol/hooks/super_sol_prompt_hook.py" = "fablized_sol/_release/v0_9/plugin/hooks/super_sol_prompt_hook.py"
"plugins/super-sol/hooks/super_sol_routes.py" = "fablized_sol/_release/v0_9/plugin/hooks/super_sol_routes.py"
"plugins/super-sol/hooks/super_sol_state.py" = "fablized_sol/_release/v0_9/plugin/hooks/super_sol_state.py"
"plugins/super-sol/skills/super-sol/SKILL.md" = "fablized_sol/_release/v0_9/plugin/skills/super-sol/SKILL.md"
"plugins/super-sol/skills/super-sol/agents/openai.yaml" = "fablized_sol/_release/v0_9/plugin/skills/super-sol/agents/openai.yaml"
"eval/v09_loop_audit.py" = "fablized_sol/_release/v0_9/eval/v09_loop_audit.py"
"eval/v09_loop_contract.py" = "fablized_sol/_release/v0_9/eval/v09_loop_contract.py"
"eval/v09_loop_isolation.py" = "fablized_sol/_release/v0_9/eval/v09_loop_isolation.py"
"eval/v09_loop_replay.py" = "fablized_sol/_release/v0_9/eval/v09_loop_replay.py"
"eval/v09_loop_runtime.py" = "fablized_sol/_release/v0_9/eval/v09_loop_runtime.py"
"eval/v09_loop_seccomp.py" = "fablized_sol/_release/v0_9/eval/v09_loop_seccomp.py"
"eval/v09_loop_sequences.json" = "fablized_sol/_release/v0_9/eval/v09_loop_sequences.json"
"docs/V0.9_PROMOTION_PROTOCOL.md" = "fablized_sol/_release/v0_9/docs/V0.9_PROMOTION_PROTOCOL.md"
"docs/RELEASE_BRIEF_0.9.0RC1.md" = "fablized_sol/_release/v0_9/docs/RELEASE_BRIEF_0.9.0RC1.md"
"benchmarks/v0.9-loop-replay/README.md" = "fablized_sol/_release/v0_9/benchmarks/v0.9-loop-replay/README.md"
"benchmarks/v0.9-loop-replay/report.json" = "fablized_sol/_release/v0_9/benchmarks/v0.9-loop-replay/report.json"

[tool.hatch.build.targets.sdist]
include = [
  "/.agents",
  "/.python-version",
  "/AGENTS.md",
  "/CONTRIBUTING.md",
  "/LICENSE",
  "/NOTICE",
  "/README.md",
  "/SECURITY.md",
  "/benchmarks/v0.9-loop-replay/README.md",
  "/benchmarks/v0.9-loop-replay/report.json",
  "/docs",
  "/eval/v09_loop*",
  "/pyproject.toml",
  "/plugins/super-sol/.codex-plugin/plugin.json",
  "/plugins/super-sol/hooks",
  "/plugins/super-sol/skills/super-sol",
  "/security",
  "/src",
  "/uv.lock",
]

[dependency-groups]
dev = [
  "basedpyright>=1.31,<2",
  "pytest>=9.0.3,<10",
  "pytest-cov>=7,<8",
  "ruff>=0.12,<1",
]

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.12"
pythonPlatform = "All"
extraPaths = ["src", "plugins/super-sol/hooks"]
include = [
  "src",
  "tests",
  "plugins/super-sol/hooks",
  "eval/verifier/subject_worker.py",
  "eval/verifier/hidden/support.py",
]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist"]
reportUnusedCallResult = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedVariable = "error"
reportMissingParameterType = "error"
reportPrivateUsage = "error"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# typeCheckingMode = "all" and Ruff ANN rules enforce return annotations.
select = ["ALL"]
ignore = ["COM812", "ISC001", "D203", "D213", "CPY001", "FBT001", "FBT002"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "PLR2004", "SLF001", "D"]
"eval/**/*.py" = ["D", "INP001", "S101", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = ["error"]
